--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Node Js API",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [
