--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "google-auth-library": "^4.2.4",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.4.3",
     "mongoose-mongodb-errors": "0.0.2",
     "morgan": "^1.9.1",
